--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"test:unit": "vitest"
 	},
 	"dependencies": {
+		"@unovis/svelte": "^1.4.0",
 		"clsx": "^2.1.1",
 		"tailwind": "^4.0.0",
 		"tailwind-merge": "^2.3.0",
