--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ dist/
 /.svelte-kit
 /package
 .env
-.env.*
 !.env.example
 .vercel
 .output
@@ -18,3 +17,6 @@ vite.config.ts.timestamp-*
 !.yarn/versions
 
 src/lib/api.ts
+
+.idea
+.vsccode
