--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,7 @@
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-POSTGRES_USER=
+DB_HOST=localhost
+DB_PORT=15432
+DB_NAME=
+DB_USER=
+DB_PASSWORD=
+# there is still no way to concatenate the url in prisma or give it auth elements individualy, so good luck on the CI
+DB_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
