--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,10 +3,12 @@ services:
   database:
     image: postgres:12-bullseye
     container_name: postgres-container
-    env_file:
-      - .env
+    environment:
+      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
     ports:
-      - '15432:5432'
+      - '${DB_PORT}:5432'
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./dump:/docker-entrypoint-initdb.d/
