--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@prisma/client": "^5.13.0",
     "@unovis/svelte": "^1.4.0",
+    "bcryptjs": "^2.4.3",
+    "bits-ui": "^0.21.7",
     "clsx": "^2.1.1",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
@@ -23,32 +26,39 @@
   "devDependencies": {
     "@fontsource/fira-mono": "^4.5.10",
     "@neoconfetti/svelte": "^1.0.0",
-    "@playwright/test": "^1.28.1",
-    "@sveltejs/adapter-auto": "^3.0.0",
-    "@sveltejs/kit": "^2.0.0",
-    "@sveltejs/vite-plugin-svelte": "^3.0.0",
-    "@types/eslint": "^8.56.0",
+    "@playwright/test": "^1.44.0",
+    "@sveltejs/adapter-auto": "^3.2.0",
+    "@sveltejs/kit": "^2.5.8",
+    "@sveltejs/vite-plugin-svelte": "^3.1.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/eslint": "^8.56.10",
+    "@types/node": "^20.12.11",
     "@types/swagger-ui": "^3.52.4",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
-    "autoprefixer": "^10.4.16",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^7.9.0",
+    "@typescript-eslint/parser": "^7.9.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.35.1",
-    "postcss": "^8.4.32",
-    "postcss-load-config": "^5.0.2",
-    "prettier": "^3.1.1",
-    "prettier-plugin-svelte": "^3.1.2",
-    "prettier-plugin-tailwindcss": "^0.5.9",
-    "svelte": "^4.2.7",
-    "svelte-check": "^3.6.0",
-    "swagger-ui": "^5.13.0",
-    "tailwindcss": "^3.3.6",
-    "tslib": "^2.4.1",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.3",
+    "eslint-plugin-svelte": "^2.39.0",
+    "postcss": "^8.4.38",
+    "postcss-load-config": "^5.1.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-svelte": "^3.2.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prisma": "^5.13.0",
+    "svelte": "^4.2.16",
+    "svelte-check": "^3.7.1",
+    "swagger-ui": "^5.17.9",
+    "tailwindcss": "^3.4.3",
+    "tslib": "^2.6.2",
+    "tsx": "^4.10.2",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
     "vite-plugin-sveltekit-api-generator": "^0.1.3",
-    "vitest": "^1.2.0"
+    "vitest": "^1.6.0"
   },
-  "type": "module"
+  "type": "module",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  }
 }
