--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bcryptjs": "^2.4.3",
     "bits-ui": "^0.21.7",
     "clsx": "^2.1.1",
+    "lucide-svelte": "^0.378.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
   },
