--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "test:unit": "vitest"
   },
   "dependencies": {
+    "@auth/core": "^0.31.0",
+    "@auth/sveltekit": "^1.1.0",
     "@prisma/client": "^5.13.0",
     "@unovis/svelte": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "bits-ui": "^0.21.7",
     "clsx": "^2.1.1",
+    "lucide-svelte": "^0.378.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1"
   },
@@ -60,5 +63,6 @@
   "type": "module",
   "prisma": {
     "seed": "tsx prisma/seed.ts"
-  }
+  },
+  "packageManager": "pnpm@9.1.1+sha256.9551e803dcb7a1839fdf5416153a844060c7bce013218ce823410532504ac10b"
 }
