--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,11 @@ DB_USER=
 DB_PASSWORD=
 # there is still no way to concatenate the url in prisma or give it auth elements individualy, so good luck on the CI
 DB_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
+
+# Auth.js
+AUTH_SECRET=
+AUTH_GITHUB_ID=
+AUTH_GITHUB_SECRET=
+# node mailer
+EMAIL_SERVER=smtp://username:password@smtp.example.com:587
+EMAIL_FROM=noreply@example.com
