--- a/.gitignore
+++ b/.gitignore
@@ -10,13 +10,8 @@ dist/
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
 
-.yarn/*
-!.yarn/releases
-!.yarn/plugins
-!.yarn/sdks
-!.yarn/versions
-
 src/lib/api.ts
 
 .idea
-.vsccode
+.vsccode/*
+!.vscode/extensions.json
