--- a/package.json
+++ b/package.json
@@ -16,15 +16,21 @@
   },
   "dependencies": {
     "@auth/core": "^0.31.0",
+    "@auth/prisma-adapter": "^2.1.0",
     "@auth/sveltekit": "^1.1.0",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.14.0",
     "@unovis/svelte": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "bits-ui": "^0.21.7",
     "clsx": "^2.1.1",
+    "formsnap": "^1.0.0",
     "lucide-svelte": "^0.378.0",
+    "mode-watcher": "^0.3.0",
+    "nodemailer": "^6.9.13",
+    "sveltekit-superforms": "^2.14.0",
     "tailwind-merge": "^2.3.0",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-variants": "^0.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@fontsource/fira-mono": "^4.5.10",
