add alpaca api examples

--- a/.env.template
+++ b/.env.template
@@ -5,3 +5,7 @@ DB_USER=
 DB_PASSWORD=
 # there is still no way to concatenate the url in prisma or give it auth elements individualy, so good luck on the CI
 DB_URL="postgresql://${DB_USER}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_NAME}?schema=public"
+
+APCA_API_KEY_ID=
+APCA_API_SECRET_KEY=
+APCA_API_DOMAIN=https://paper-api.alpaca.markets
