--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "bits-ui": "^0.21.7",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "formsnap": "^1.0.0",
     "lucide-svelte": "^0.378.0",
     "mode-watcher": "^0.3.0",
