--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite dev",
-    "build": "prisma generate && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "test": "npm run test:integration && npm run test:unit",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -15,16 +15,11 @@
     "test:unit": "vitest"
   },
   "dependencies": {
-    "@auth/core": "^0.31.0",
-    "@auth/prisma-adapter": "^2.1.0",
-    "@auth/sveltekit": "^1.1.0",
-    "@prisma/client": "^5.14.0",
     "@supabase/supabase-js": "^2.43.4",
     "@unovis/svelte": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "bits-ui": "^0.21.7",
     "clsx": "^2.1.1",
-    "dotenv": "^16.4.5",
     "formsnap": "^1.0.0",
     "lucide-svelte": "^0.378.0",
     "mode-watcher": "^0.3.0",
@@ -56,7 +51,6 @@
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "prisma": "^5.13.0",
     "svelte": "^4.2.16",
     "svelte-check": "^3.7.1",
     "swagger-ui": "^5.17.9",
@@ -68,8 +62,5 @@
     "vite-plugin-sveltekit-api-generator": "^0.1.3",
     "vitest": "^1.6.0"
   },
-  "type": "module",
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
-  }
+  "type": "module"
 }
