--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@auth/core": "^0.31.0",
     "@auth/sveltekit": "^1.1.0",
     "@prisma/client": "^5.13.0",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/auth-ui-svelte": "^0.2.9",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.4",
     "@unovis/svelte": "^1.4.0",
     "bcryptjs": "^2.4.3",
     "bits-ui": "^0.21.7",
