--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "bcryptjs": "^2.4.3",
     "bits-ui": "^0.21.7",
     "clsx": "^2.1.1",
+    "formsnap": "^1.0.0",
     "lucide-svelte": "^0.378.0",
+    "svelte-sonner": "^0.3.24",
+    "sveltekit-superforms": "^2.14.0",
     "tailwind-merge": "^2.3.0",
-    "tailwind-variants": "^0.2.1"
+    "tailwind-variants": "^0.2.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@fontsource/fira-mono": "^4.5.10",
