--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite dev",
-    "build": "prisma generate && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "test": "npm run test:integration && npm run test:unit",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -17,7 +17,6 @@
   "dependencies": {
     "@auth/core": "^0.31.0",
     "@auth/sveltekit": "^1.1.0",
-    "@prisma/client": "^5.13.0",
     "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/auth-ui-svelte": "^0.2.9",
     "@supabase/ssr": "^0.3.0",
@@ -56,7 +55,6 @@
     "prettier": "^3.2.5",
     "prettier-plugin-svelte": "^3.2.3",
     "prettier-plugin-tailwindcss": "^0.5.14",
-    "prisma": "^5.13.0",
     "svelte": "^4.2.16",
     "svelte-check": "^3.7.1",
     "swagger-ui": "^5.17.9",
@@ -68,8 +66,5 @@
     "vite-plugin-sveltekit-api-generator": "^0.1.3",
     "vitest": "^1.6.0"
   },
-  "type": "module",
-  "prisma": {
-    "seed": "tsx prisma/seed.ts"
-  }
+  "type": "module"
 }
