--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "test:unit": "vitest"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.43.4",
-    "@unovis/svelte": "^1.4.0",
     "@alpacahq/alpaca-trade-api": "^3.0.1",
+    "@auth/core": "^0.31.0",
+    "@auth/sveltekit": "^1.1.0",
+    "@supabase/auth-ui-react": "^0.4.7",
+    "@supabase/auth-ui-shared": "^0.1.8",
+    "@supabase/auth-ui-svelte": "^0.2.9",
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.4",
     "@unovis/svelte": "^1.4.1",
     "bcryptjs": "^2.4.3",
     "bits-ui": "^0.21.10",
@@ -26,6 +31,7 @@
     "lucide-svelte": "^0.378.0",
     "mode-watcher": "^0.3.0",
     "nodemailer": "^6.9.13",
+    "svelte-sonner": "^0.3.24",
     "sveltekit-superforms": "^2.14.0",
     "tailwind-merge": "^2.3.0",
     "tailwind-variants": "^0.2.1",
