--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "svelte": "^4.2.16",
     "svelte-check": "^3.7.1",
+    "svelte-headless-table": "^0.18.2",
     "swagger-ui": "^5.17.9",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.6.2",
